# teaser_ba

./: CMakeLists.txt  README.md  package.xml
include/: Utility.h
include/ceres/: PointToPoint.cc  PointToPoint.h  pose_local_parameterization.cc  pose_local_parameterization.h
include/g2o/: PointToPoint copy.h  PointToPoint.cc  PointToPoint.h
include/teaser-toolkit/: TeaserHead.cc  TeaserHead.h
launch/: teaser_ba.launch
src/: covisibility.cc  main_node (copy).cc  main_node.cc  test_node.cc  tmp.cpp
test/result/: cloud1_trans.pcd  cloud2_trans.pcd  cloud3_trans.pcd  cloud4_trans.pcd  co2obs.pcd  co3obs.pcd  co4obs.pcd  opt_landmarks.pcd
